--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,63 +12,105 @@ jobs:
     - name: Install and Setup xRDP
       run: |
         dnf update -y
-        dnf install -y xrdp firewalld sudo xfce4 xfce4-terminal
+        dnf install -y xrdp firewalld @xfce-desktop dbus-x11
         
         # تكوين xRDP
-        echo "xfce4-session" > ~/.Xclients
-        chmod +x ~/.Xclients
+        mkdir -p /home/TOOLBOXLAP/.config
+        echo 'exec startxfce4' > /home/TOOLBOXLAP/.xinitrc
+        chmod +x /home/TOOLBOXLAP/.xinitrc
         
-        # بدء خدمات xRDP
-        systemctl enable xrdp
-        systemctl enable xrdp-sesman
-        systemctl start xrdp
-        systemctl start xrdp-sesman
-        
-        # فتح المنفذ في الجدار الناري
-        firewall-cmd --add-port=3389/tcp --permanent
-        firewall-cmd --reload
+        # تكوين xRDP
+        sed -i 's/use_vsock=true/use_vsock=false/g' /etc/xrdp/xrdp.ini
+        echo "[xfce]" >> /etc/xrdp/xrdp.ini
+        echo "name=xfce" >> /etc/xrdp/xrdp.ini
+        echo "lib=libxup.so" >> /etc/xrdp/xrdp.ini
+        echo "username=ask" >> /etc/xrdp/xrdp.ini
+        echo "password=ask" >> /etc/xrdp/xrdp.ini
+        echo "ip=127.0.0.1" >> /etc/xrdp/xrdp.ini
+        echo "port=-1" >> /etc/xrdp/xrdp.ini
 
     - name: Create RDP User
       run: |
-        useradd -m -G wheel -s /bin/bash fedorauser
-        echo "fedorauser:admin@123" | chpasswd
-        echo "fedorauser ALL=(ALL) NOPASSWD:ALL" >> /etc/sudoers
+        useradd -m -G wheel -s /bin/bash TOOLBOXLAP
+        echo "TOOLBOXLAP:admin@123" | chpasswd
+        echo "TOOLBOXLAP ALL=(ALL) NOPASSWD:ALL" >> /etc/sudoers
+        chown -R TOOLBOXLAP:TOOLBOXLAP /home/TOOLBOXLAP
 
-    - name: Get Connection Info
+    - name: Install Tailscale
       run: |
-        # الحصول على IP داخلي
-        hostname -I > /tmp/ip.txt
-        INTERNAL_IP=$(hostname -I | awk '{print $1}')
-        echo "INTERNAL_IP=$INTERNAL_IP" >> $GITHUB_ENV
+        dnf install -y curl
+        curl -fsSL https://tailscale.com/install.sh | sh
+        tailscale up --auth-key=${{ secrets.TAILSCALE_AUTH_KEY }} --hostname=fedora-rdp-$GITHUB_RUN_ID
         
-        echo "RDP_USER=fedorauser" >> $GITHUB_ENV
-        echo "RDP_PASSWORD=admin@123" >> $GITHUB_ENV
-        echo "RDP_PORT=3389" >> $GITHUB_ENV
+        # الانتظار للحصول على IP
+        sleep 10
+        TS_IP=$(tailscale ip -4)
+        echo "TAILSCALE_IP=$TS_IP" >> $GITHUB_ENV
 
-    - name: Display RDP Connection Details
+    - name: Start RDP Services
+      run: |
+        # بدء DBUS
+        dbus-daemon --system --nofork --nopidfile &
+        sleep 2
+        
+        # بدء xRDP
+        xrdp-sesman &
+        sleep 2
+        xrdp &
+        sleep 5
+        
+        # فتح البورت في الجدار الناري
+        firewall-cmd --add-port=3389/tcp --permanent 2>/dev/null || true
+        firewall-cmd --reload 2>/dev/null || true
+
+    - name: Verify RDP Accessibility
+      run: |
+        echo "فحص اتصال RDP عبر Tailscale..."
+        # اختبار اتصال RDP
+        if command -v nc &> /dev/null; then
+          dnf install -y nc
+        fi
+        nc -z localhost 3389 && echo "✅ RDP port 3389 is listening" || echo "❌ RDP port not listening"
+
+    - name: Display Connection Details
       run: |
         echo " "
         echo "=== FEDORA RDP SERVER READY ==="
-        echo "Internal IP: $INTERNAL_IP"
-        echo "Username: fedorauser"
+        echo "Tailscale IP: $TAILSCALE_IP"
+        echo "Username: TOOLBOXLAP"
         echo "Password: admin@123"
         echo "Port: 3389"
         echo "Desktop: XFCE"
+        echo " "
+        echo "INSTRUCTIONS:"
+        echo "1. تأكد من أن جهازك متصل بنفس شبكة Tailscale"
+        echo "2. افتح Remote Desktop Client"
+        echo "3. أدخل العنوان: $TAILSCALE_IP"
+        echo "4. استخدم البيانات أعلاه"
         echo "================================"
-        echo "Note: You need to port forward 3389 to access from outside"
         echo " "
 
     - name: Keep Server Alive
       run: |
-        # التأكد من أن الخدمات شغالة
-        systemctl is-active xrdp
-        systemctl is-active xrdp-sesman
+        echo "RDP Server is running via Tailscale..."
+        # عرض حالة Tailscale
+        echo "📡 حالة Tailscale:"
+        tailscale status
         
-        # عرض حالة الشبكة
-        netstat -tlnp | grep 3389 || echo "RDP port not listening"
+        echo "🔌 حالة اتصال RDP:"
+        netstat -tlnp | grep 3389 && echo "✅ Port 3389 is open" || echo "❌ Port 3389 is closed"
         
-        # الحفاظ على التشغيل
+        counter=0
         while true; do
-          echo "[$(date)] Fedora RDP Server running - IP: $INTERNAL_IP"
-          sleep 300
+          echo "[$(date)] RDP نشط - IP: $TAILSCALE_IP - User: TOOLBOXLAP"
+          counter=$((counter + 1))
+          # كل 5 دقائق نتحقق من حالة Tailscale
+          if [ $((counter % 5)) -eq 0 ]; then
+            TS_CURRENT_IP=$(tailscale ip -4)
+            if [ "$TS_CURRENT_IP" != "$TAILSCALE_IP" ]; then
+              echo "🔄 تحديث Tailscale IP: $TS_CURRENT_IP"
+              echo "TAILSCALE_IP=$TS_CURRENT_IP" >> $GITHUB_ENV
+            fi
+          fi
+          sleep 60
         done
