--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,27 +25,22 @@ jobs:
         chmod +x /home/TOOLBOXLAP/.xinitrc
         chown TOOLBOXLAP:TOOLBOXLAP /home/TOOLBOXLAP/.xinitrc
 
-    - name: Install Tailscale (Fixed)
+    - name: Install and Start Tailscale (Fixed)
       run: |
         dnf install -y curl
-        # تحميل وتثبيت Tailscale يدوياً بدون systemd
-        curl -fsSL https://pkgs.tailscale.com/stable/tailscale_1.90.1_x86_64.tgz | tar -xz
-        cp tailscale_1.90.1_x86_64/tailscale /usr/local/bin/
-        cp tailscale_1.90.1_x86_64/tailscaled /usr/local/bin/
+        # تثبيت Tailscale بدون استخدام systemd
+        curl -fsSL https://tailscale.com/install.sh | sh
         
-        # إنشاء المجلدات المطلوبة
-        mkdir -p /var/run/tailscale /var/cache/tailscale /var/lib/tailscale
-        
-        # بدء Tailscale يدوياً
-        /usr/local/bin/tailscaled --state=/var/lib/tailscale/tailscaled.state --socket=/var/run/tailscale/tailscaled.sock &
+        # بدء tailscaled يدوياً بدون systemctl
+        tailscaled --state=/var/lib/tailscale/tailscaled.state --socket=/var/run/tailscale/tailscaled.sock &
         sleep 5
         
-        # تشغيل الاتصال
-        /usr/local/bin/tailscale up --auth-key=${{ secrets.TAILSCALE_AUTH_KEY }} --hostname=fedora-rdp-$GITHUB_RUN_ID
+        # تشغيل Tailscale
+        tailscale up --auth-key=${{ secrets.TAILSCALE_AUTH_KEY }} --hostname=fedora-rdp-$GITHUB_RUN_ID
         
         # الانتظار للحصول على IP
         sleep 10
-        TS_IP=$(/usr/local/bin/tailscale ip -4)
+        TS_IP=$(tailscale ip -4)
         echo "TAILSCALE_IP=$TS_IP" >> $GITHUB_ENV
         echo "✅ Tailscale IP: $TS_IP"
 
@@ -56,10 +51,6 @@ jobs:
         sleep 2
         xrdp &
         sleep 5
-        
-        # التحقق من الخدمات
-        echo "✅ RDP services started"
-        ps aux | grep xrdp
 
     - name: Display RDP Connection Info
       run: |
